# cmsis-v5

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yaml
